# mantle-turing-trading-agent

./: .gitignore  BUIDL_SUBMISSION.md  CC_HANDOFF.md  DEMO_VIDEO_SCRIPT.md  DORAHAKS_VIDEO_DESC.txt  PLAN.md  README.md  YOUTUBE_DESCRIPTION.txt  YOUTUBE_TITLE.txt  generate_cover.py  narration.txt  pyproject.toml
src/mantle_agent/: __init__.py  __main__.py  config.py  types.py
src/mantle_agent/data/: mock_market.py
src/mantle_agent/execution/: trader.py
src/mantle_agent/reporting/: dashboard.py  logger.py
src/mantle_agent/strategy/: engine.py  risk.py  signals.py
tests/: test_engine.py  test_risk.py  test_signals.py
